tests/type-errors/no_postcondition_in_global_spec.arl
archetype no_postcondition_in_global_spec

entry main () {
  effect {
    ()
  }
}

specification {
  postcondition p1 {
    true
  }
}
